--- a/src/NetworkConfigApp/NetworkConfigApp.csproj
+++ b/src/NetworkConfigApp/NetworkConfigApp.csproj
@@ -8,7 +8,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <AssemblyName>NetworkConfigApp</AssemblyName>
     <RootNamespace>NetworkConfigApp</RootNamespace>
-    <!-- <ApplicationIcon>Resources\app.ico</ApplicationIcon> -->
+    <ApplicationIcon>Resources\app.ico</ApplicationIcon>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
@@ -39,6 +39,11 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Resources\oui_database.txt" />
+    <EmbeddedResource Include="Resources\app_icon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\app.ico" />
   </ItemGroup>
 
   <!-- ILRepack: Merge all DLLs into single portable EXE after build -->
